<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"

        >
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_astronaut" />
        <TextView
            android:id="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_kiddo"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/open_sans"
            />
        <TextView
            android:id="@+id/text_2"
            android:layout_below="@+id/text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lora_bold"
            />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll"
            android:layout_below="@+id/text_2"
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:fadeScrollbars="true"
            android:layout_alignParentStart="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                    <RelativeLayout
                        android:id="@+id/card_alphabets"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:src="@drawable/alphabets" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/open_sans_bold"
                            android:text="@string/alphabets"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/card_numbers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:src="@drawable/numbers" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/open_sans_bold"
                            android:text="@string/numbers"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="normal" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/card_shapes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                        <ImageView
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:src="@drawable/shapes" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/open_sans_bold"
                            android:text="@string/shapes"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="30sp"
                            android:textStyle="normal" />
                    </RelativeLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_1"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/text_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/text_intro"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@drawable/curved_btn_white"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"/>

        <ImageView
            android:id="@+id/img_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_astronaut"
            android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/curved_btn_white"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/lets_go"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>